# benchmark_planning_setups

./: README.md
setup_1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
setup_1_support/: CMakeLists.txt  package.xml
setup_1_support/config/: display_settings.rviz  planning_config.yaml
setup_1_support/launch/: display.launch
setup_1_support/meshes/visual/: mig_torch_small.stl
setup_1_support/scripts/: create_kinpin_urdf.py  kingpin.irl  kingpin.urdf  publish_work.py  publish_work_poses.py
setup_1_support/scripts/templates/: box.template.xml  joint.template.xml  task.template.txt  workobject.template.urdf
setup_1_support/tasks/: boxes.irl  kingpin.irl  kingpin_no_part.irl  l_profile.irl  nothing.irl
setup_1_support/urdf/: setup_1.urdf  setup_1.xacro  setup_teapot.xacro
setup_1_support/urdf/work/: boxes.urdf  kingpin.urdf  kingpin_no_part.urdf  l_profile.urdf  l_profile_obstacle.urdf  nothing.urdf
setup_2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
setup_2_support/: CMakeLists.txt  package.xml
setup_3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
setup_3_support/: CMakeLists.txt  package.xml
setup_3_support/config/: planning_config.yaml
setup_3_support/launch/: display.launch
setup_3_support/meshes/visual/: carrier.stl
setup_3_support/tasks/: halfopen_box copy.irl  halfopen_box.irl  task_1.irl
setup_3_support/urdf/: rail_macro.xacro  rotation_table_macro.xacro  setup_3.xacro
setup_3_support/urdf/work/: halfopen_box.stl  halfopen_box.urdf  halfopen_box_small.stl  tank.urdf  workobject_1.stl
setup_4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
setup_4_support/: CMakeLists.txt  package.xml
(+132 files in other folders)
