<?xml version="1.0"?>
<package format="2">
  <name>setup_3_support</name>
  <version>0.0.0</version>
  <description>Welding robot on rail, with rotation table.</description>

  <maintainer email="jeroen.demaeyer@kuleuven.be">jeroendm</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>xacro</exec_depend>
  <!-- <exec_depend>kuka_kr5_support</exec_depend> -->

  <export></export>
</package>
